# krusty

./: Cargo.toml  Dockerfile  README.md  build.rs  fly.toml  log4rs.yml
.github/workflows/: ci.yml
migrations/2022-09-16-173954_krusty/: down.sql  up.sql
migrations/2022-09-21-195301_forwarded_messages/: down.sql  up.sql
migrations/2022-10-06-210049_forwarded_messages_forwarded_chat_id/: down.sql  up.sql
migrations/2023-07-15-203523_add_for_whole_text_flag/: down.sql  up.sql
migrations/2023-07-20-160301_scheduled_messages/: down.sql  up.sql
migrations/2023-07-28-064430_added_few_more_media_types/: down.sql  up.sql
src/: bot.rs  hyper_log_filter.rs  lib.rs  main.rs  prefetch.rs  schema.rs  similarity.rs  tag_provider.rs  token_provider.rs
src/bot/: cache.rs  ctx.rs  mod.rs  utils.rs
src/bot/features/: dupl_checker.rs  mod.rs  scheduled_messages.rs
src/bot/features/schedule/: messages.rs  mod.rs  scheduler.rs
src/bot/features/tag_detector/: mod.rs  similarity.rs  tag_provider.rs  token_provider.rs
src/database/: repository.rs  types.rs
src/prefetch/: download.rs  gachi.rs  mod.rs
src/similar/: mod.rs
src/similarity/: mod.rs  token_provider.rs
