[package]
name = "krusty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.2.1"
chrono = "0.4.0"
levenshtein = "1.0.5"
log = "0.4"
ordered-float = "3.0"
pretty_env_logger = "0.4"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
multimap = "0.8.3"
regex = "1"
teloxide = { version = "0.10", features = ["macros", "auto-send"] }
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
zip = "0.6.2"
hyper = { version = "0.14.20", features = ["server"] }

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10.41", features = ["vendored"] }