[package]
name = "krusty"
version = "1.1.15"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
bytes = "1.2.1"
cached = "0.44.0"
chrono = "0.4.0"
deadpool = "0.9"
diesel = { version = "2.0.0", features = ["postgres"] }
diesel-async = { version = "0.3.1", features = ["deadpool", "postgres"] }
diesel-derive-enum = { version = "2.1", features = ["postgres"] }
diesel_migrations = "2.0.0"
fancy-regex = "0.11.0"
futures = "0.3"
hyper = { version = "0.14.20", features = ["server"] }
levenshtein = "1.0.5"
log = "0.4"
log4rs = { version = "1.2.0", features = ["gzip"] }
mockall = "0.11.2"
ordered-float = "3.0"
percentage = "0.1.0"
rand = "0.8.5"
remove_dir_all = "0.8.0"
serde = "1.0.175"
teloxide = { version = "0.12.2", features = ["macros", "auto-send"] }
time = "0.3.23"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
tokio-cron-scheduler = "0.9.4"
tracing = { version = "0.1.37", features = ["log", "log-always"] }
tracing-attributes = "0.1.26"
tracing-unwrap = "0.10.0"
uuid = "1.4"

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10.55", features = ["vendored"] }
